Finish mobile remove unused file

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   	<header>
       <div class="container heading-container">
         <div class="row justify-content-end header-content no-gutters">
-          <div class="col-4 heading">
+          <div class="col-sm-4 col-12 heading">
             <h1 class="main-font-color">POZ<span>NAN</span> - CITY<span>2</span>LIVE</h1>
           </div>
-          <div class="col-4 social-network-header">
+          <div class="col-sm-4 col-12 social-network-header">
             <a href="https://www.evernote.com/" target="_blank">
               <img src="image/evernote.png" class="bg-evernote">
             </a>
@@ -240,11 +240,11 @@
       </div>
     </section>
     <footer class="container heading-container">
-      <div class="row">
-        <div class="col-6">
+      <div class="row additional-responsive">
+        <div class="col-sm-4 col-12">
           <h1 class="main-font-color">POZ<span>NAN</span> - CITY<span>2</span>LIVE</h1>
         </div>
-        <div class="col-6">
+        <div class="col-sm-8 col-12">
           <nav class="navbar justify-content-end">
             <ul class="nav nav-menu-footer">
               <li class="nav-item">
@@ -269,8 +269,5 @@
     </footer>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvPLVi7KMkCirfvCo8u7h65tMeDjziNoQ"></script>
     <script type="text/javascript" src="js/script.js"></script>
-  	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-   	<script src="js/bootstrap.min.js"></script>
   </body>
 </html>
